[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RedGalaxy"
version = "0.0.1"
authors = [
  { name="Ristellise", email="contact@shinon71.moe" },
]
description = "Unofficial Twitter API's wrapped in a nice present."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ristellise/RedGalaxy"
"Bug Tracker" = "https://github.com/Ristellise/RedGalaxy/issues"